Correct scrolling on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -423,7 +423,7 @@ input:-ms-input-placeholder { color: #fff; opacity:0.75 }
         -webkit-flex: 1;
         -ms-flex: 1;
         flex: 2;
-        padding: 0 2% 5% 4%;
+        padding: 0 2% 5% 0;
       }
     }
   }
@@ -498,7 +498,6 @@ input:-ms-input-placeholder { color: #fff; opacity:0.75 }
       }
       .venue-box {
         font-size: 1.5rem !important;
-        padding: 0px !important;
       }
       .venue-map {
         margin-top: 7% !important;
@@ -560,7 +559,7 @@ input:-ms-input-placeholder { color: #fff; opacity:0.75 }
 
 .venue-map {
   display: block;
-  margin: 4% auto 4% auto;
-  width: 70%;
+  margin: auto auto auto auto;
+  width: 100%;
   height: 18rem;
 }
